refresh supported django/python versions

--- a/tox.ini
+++ b/tox.ini
@@ -1,14 +1,16 @@
 [tox]
 envlist =
-       django18,
-       django110,
-       django111,
-       django{master}
+    py{35,36,37,38}-django22
+    py{36,37,38}-django30
 
 [testenv]
+basepython =
+    py35: python3.5
+    py36: python3.6
+    py37: python3.7
+    py38: python3.8
 deps =
-        django18: Django==1.8.18
-        django110: Django==1.10.8
-        django111: Django==1.11.6
-        djangomaster: https://github.com/django/django/archive/master.tar.gz
+    django22: Django>=2.2,<3.0
+    django30: Django>=3.0,<3.1
+    djangomaster: https://github.com/django/django/archive/master.tar.gz
 commands = python setup.py test
