--- a/tox.ini
+++ b/tox.ini
@@ -1,7 +1,8 @@
 [tox]
 envlist =
-    py{35,36,37,38}-django22
-    py{36,37,38}-django30
+    py{35,36,37,38,39,310}-django22
+    py{36,37,38,39,310}-django31
+    py{36,37,38,39,310}-django32
 
 [testenv]
 basepython =
@@ -9,8 +10,11 @@ basepython =
     py36: python3.6
     py37: python3.7
     py38: python3.8
+    py39: python3.9
+    py310: python3.10
 deps =
     django22: Django>=2.2,<3.0
-    django30: Django>=3.0,<3.1
+    django31: Django>=3.1,<3.2
+    django32: Django>=3.2,<3.3
     djangomaster: https://github.com/django/django/archive/master.tar.gz
 commands = python setup.py test
