--- a/.github/workflows/tests-and-codestyle.yaml
+++ b/.github/workflows/tests-and-codestyle.yaml
@@ -32,12 +32,18 @@ jobs:
       fail-fast: false
       matrix:
         python: [3.5, 3.6, 3.7, 3.8, 3.9, "3.10"]
-        django: [2.2.*, 3.1.*, 3.2.*]
+        django: [2.2.*, 3.1.*, 3.2.*, 4.0.*]
         exclude:
           - python: 3.5
             django: 3.1.*
           - python: 3.5
             django: 3.2.*
+          - python: 3.5
+            django: 4.0.*
+          - python: 3.6
+            django: 4.0.*
+          - python: 3.7
+            django: 4.0.*
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
