--- a/tox.ini
+++ b/tox.ini
@@ -3,6 +3,7 @@ envlist =
     py{35,36,37,38,39,310}-django22
     py{36,37,38,39,310}-django31
     py{36,37,38,39,310}-django32
+    py{38,39,310}-django40
 
 [testenv]
 basepython =
@@ -16,5 +17,6 @@ deps =
     django22: Django>=2.2,<3.0
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
+    django40: Django>=4.0,<4.1
     djangomaster: https://github.com/django/django/archive/master.tar.gz
 commands = python setup.py test
