fix Slack notifications colors

--- a/.github/workflows/tests-and-codestyle.yaml
+++ b/.github/workflows/tests-and-codestyle.yaml
@@ -20,7 +20,7 @@ jobs:
         with:
           channel_id: C0PT3267R
           status: STARTED
-          color: warning
+          color: '#ee9b00'
         env:
           SLACK_BOT_TOKEN: ${{ secrets.SLACK_BOT_TOKEN }}
     outputs:
@@ -73,7 +73,7 @@ jobs:
         with:
           channel_id: C0PT3267R
           status: FAILED
-          color: danger
+          color: '#d7263d'
   codestyle:
     runs-on: ubuntu-latest
     steps:
@@ -104,7 +104,7 @@ jobs:
         with:
           channel_id: C0PT3267R
           status: FAILED
-          color: danger
+          color: '#d7263d'
 
   notify-build-success:
     if: ${{ github.event_name == 'push' }}
@@ -119,4 +119,4 @@ jobs:
           message_id: ${{ needs.notify-build-start.outputs.status_message_id }}
           channel_id: C0PT3267R
           status: SUCCESS
-          color: good
+          color: '#16db65'
