add Django 4.1 support

--- a/tox.ini
+++ b/tox.ini
@@ -4,6 +4,7 @@ envlist =
     py{36,37,38,39,310}-django31
     py{36,37,38,39,310}-django32
     py{38,39,310}-django40
+    py{38,39,310}-django41
 
 [testenv]
 basepython =
@@ -18,5 +19,6 @@ deps =
     django31: Django>=3.1,<3.2
     django32: Django>=3.2,<3.3
     django40: Django>=4.0,<4.1
+    django41: Django>=4.1,<4.2
     djangomaster: https://github.com/django/django/archive/master.tar.gz
 commands = python setup.py test
