--- a/.github/workflows/tests-and-codestyle.yaml
+++ b/.github/workflows/tests-and-codestyle.yaml
@@ -32,7 +32,7 @@ jobs:
       fail-fast: false
       matrix:
         python: [3.5, 3.6, 3.7, 3.8, 3.9, "3.10"]
-        django: [2.2.*, 3.1.*, 3.2.*, 4.0.*]
+        django: [2.2.*, 3.1.*, 3.2.*, 4.0.*, 4.1.*]
         exclude:
           - python: 3.5
             django: 3.1.*
@@ -44,6 +44,12 @@ jobs:
             django: 4.0.*
           - python: 3.7
             django: 4.0.*
+          - python: 3.5
+            django: 4.1.*
+          - python: 3.6
+            django: 4.1.*
+          - python: 3.7
+            django: 4.1.*
     steps:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
