--- a/.github/workflows/tests-and-codestyle.yaml
+++ b/.github/workflows/tests-and-codestyle.yaml
@@ -31,7 +31,7 @@ jobs:
     strategy:
       fail-fast: false
       matrix:
-        python: [3.5, 3.6, 3.7, 3.8, 3.9, "3.10"]
+        python: [3.5, 3.6, 3.7, 3.8, 3.9, "3.10", "3.11"]
         django: [2.2.*, 3.1.*, 3.2.*, 4.0.*, 4.1.*]
         exclude:
           - python: 3.5
