--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
 envlist =
-    py{35,36,37,38,39,310}-django22
-    py{36,37,38,39,310}-django31
-    py{36,37,38,39,310}-django32
-    py{38,39,310}-django40
-    py{38,39,310}-django41
+    py{35,36,37,38,39,310,311}-django22
+    py{36,37,38,39,310,311}-django31
+    py{36,37,38,39,310,311}-django32
+    py{38,39,310,311}-django40
+    py{38,39,310,311}-django41
 
 [testenv]
 basepython =
@@ -14,6 +14,7 @@ basepython =
     py38: python3.8
     py39: python3.9
     py310: python3.10
+    py311: python3.11
 deps =
     django22: Django>=2.2,<3.0
     django31: Django>=3.1,<3.2
