add lint env option to the tox config

--- a/tox.ini
+++ b/tox.ini
@@ -5,6 +5,7 @@ envlist =
     py{36,37,38,39,310,311}-django32
     py{38,39,310,311}-django40
     py{38,39,310,311}-django41
+    lint
 
 [testenv]
 basepython =
@@ -23,3 +24,8 @@ deps =
     django41: Django>=4.1,<4.2
     djangomaster: https://github.com/django/django/archive/master.tar.gz
 commands = python setup.py test
+
+[testenv:lint]
+basepython = python3.11
+deps = flake8
+commands = flake8 django_uidfield setup.py
