Use Ubuntu 20 runner since the latest version doesn't have python 3.5 and 3.6

--- a/.github/workflows/tests-and-codestyle.yaml
+++ b/.github/workflows/tests-and-codestyle.yaml
@@ -27,7 +27,7 @@ jobs:
       status_message_id: ${{ steps.slack.outputs.message_id }}
 
   tests:
-    runs-on: ubuntu-latest
+    runs-on: ubuntu-20.04  # No python 3.5 / 3.6 for ubuntu-22
     strategy:
       fail-fast: false
       matrix:
