--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,14 @@
 [tox]
 envlist =
-    py{35,36,37,38,39,310,311}-django22
-    py{36,37,38,39,310,311}-django31
-    py{36,37,38,39,310,311}-django32
-    py{38,39,310,311}-django40
-    py{38,39,310,311}-django41
+    py{313,312,311,310}-django51
+    py{312,311,310}-django50
+    py{312,311,310,39,38}-django42
+    py{311,310,39,38}-django41
+    py{310,39,38}-django40
+    py{310,39,38,37,36}-django32
+    py{39,38,37,36}-django31
+    py{39,38,37,36}-django30
+    py{39,38,37,36,35}-django22
     lint
 
 [testenv]
@@ -16,16 +20,23 @@ basepython =
     py39: python3.9
     py310: python3.10
     py311: python3.11
+    py312: python3.12
+    py313: python3.13
 deps =
-    django22: Django>=2.2,<3.0
-    django31: Django>=3.1,<3.2
-    django32: Django>=3.2,<3.3
-    django40: Django>=4.0,<4.1
-    django41: Django>=4.1,<4.2
+    setuptools
+    django22: Django==2.2.*
+    django30: Django==3.0.*
+    django31: Django==3.1.*
+    django32: Django==3.2.*
+    django40: Django==4.0.*
+    django41: Django==4.1.*
+    django42: Django==4.2.*
+    django50: Django==5.0.*
+    django51: Django==5.1.*
     djangomaster: https://github.com/django/django/archive/master.tar.gz
 commands = python setup.py test
 
 [testenv:lint]
-basepython = python3.11
+basepython = python3.13
 deps = flake8
 commands = flake8 django_uidfield setup.py
