--- a/.github/workflows/tests-and-codestyle.yaml
+++ b/.github/workflows/tests-and-codestyle.yaml
@@ -97,12 +97,19 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: ${{ matrix.python }}
-          cache: pip
       - name: update pip
         run: |
           pip install -U wheel
           pip install -U setuptools
           python -m pip install -U pip
+      - name: get pip cache dir
+        id: pip-cache
+        run: echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
+      - name: cache pip
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: pip-tests|${{ matrix.python }}|${{ matrix.django }}
       - run: pip install Django==${{ matrix.django }}
       - run: pip install -e .
       - run: python setup.py test
@@ -123,12 +130,19 @@ jobs:
       - uses: actions/setup-python@v5
         with:
           python-version: 3.x
-          cache: pip
       - name: update pip
         run: |
           pip install -U wheel
           pip install -U setuptools
           python -m pip install -U pip
+      - name: get pip cache dir
+        id: pip-cache
+        run: echo "dir=$(pip cache dir)" >> $GITHUB_OUTPUT
+      - name: cache pip
+        uses: actions/cache@v4
+        with:
+          path: ${{ steps.pip-cache.outputs.dir }}
+          key: pip-codestyle
       - run: pip install -U flake8
       - run: flake8
       - name: Notify slack fail
